--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "animejs": "^3.2.2",
     "gsap": "^3.12.5",
     "hammerjs": "^2.0.8",
-    "imask": "^7.3.0",
+    "maska": "^2.1.11",
     "solid-toast": "^0.5.0",
     "swiper": "^11.0.5",
     "webpack": "^5.70.0",
